test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/0_name/unknown/INCOMPLETE_FUNC.t
@static_test { expect_message={ level="LEVEL_ERROR", id="INCOMPLETE_FUNC", parameters={ id="f" } } }
function f():void;
